--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.12",
-    "@react-navigation/native-stack": "^6.9.20",
+    "@react-navigation/native": "^6.1.14",
+    "@react-navigation/native-stack": "^6.9.22",
     "axios": "^1.6.7",
-    "expo": "~50.0.7",
+    "expo": "^50.0.8",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@react-native/eslint-config": "^0.73.2",
+    "@react-native/metro-config": "^0.72.12",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.57.0",
+    "eslint-import-resolver-babel-module": "^5.3.2",
+    "eslint-plugin-import": "^2.29.1",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "prettier": "^3.2.5"
   },
   "private": true
 }
