--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "axios": "^1.6.7",
@@ -16,8 +17,11 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-audio-recorder-player": "^3.6.6",
+    "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "3.29.0"
+    "react-native-screens": "3.29.0",
+    "react-native-sound-player": "^0.13.2"
   },
   "devDependencies": {
     "@react-native/eslint-config": "^0.73.2",
