--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.22",
     "axios": "^1.6.7",
     "expo": "^50.0.8",
+    "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
