--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "^0.73.6",
     "react-native-audio-recorder-player": "^3.6.6",
     "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "4.8.2",
