--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "expo": "^50.0.8",
     "expo-secure-store": "~12.8.1",
@@ -22,7 +23,9 @@
     "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "3.29.0",
-    "react-native-sound-player": "^0.13.2"
+    "react-native-sound-player": "^0.13.2",
+    "react-redux": "^9.1.0",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@react-native/eslint-config": "^0.73.2",
