--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/native-stack": "^6.9.22",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
-    "expo": "^50.0.8",
+    "expo": "50.0.14",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
